Fuentes personalizadas - Navbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,12 @@
 @plugin "daisyui" {
   themes: light --default, dark --prefersdark, night;
 }
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("/assets/fonts/montserrat/Montserrat-Medium.ttf") format("truetype");
+}
+
+@theme {
+  --font-montserrat: "Montserrat", sans-serif;
+}
