--- a/src/styles.css
+++ b/src/styles.css
@@ -10,5 +10,16 @@
 }
 
 @theme {
+  --animate-fadeIn: fade-in 0.3s ease-in-out;
+
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
   --font-montserrat: "Montserrat", sans-serif;
 }
