Mostrar productos en pantalla

--- a/src/app/store-front/pages/home-page/home-page.component.html
+++ b/src/app/store-front/pages/home-page/home-page.component.html
@@ -5,10 +5,9 @@
   class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-2 gap-3"
 >
   <!-- product-card -->
-  <product-card />
-  <product-card />
-  <product-card />
-  <product-card />
-  <product-card />
-  <product-card />
+  @for (product of productResource.value()?.products; track $index) {
+  <product-card [product]="product" />
+  }@empty {
+  <p>No hya productos</p>
+  }
 </div>
