Página de productos por género

--- a/src/app/store-front/pages/home-page/home-page.component.html
+++ b/src/app/store-front/pages/home-page/home-page.component.html
@@ -8,6 +8,6 @@
   @for (product of productResource.value()?.products; track $index) {
   <product-card [product]="product" />
   }@empty {
-  <p>No hya productos</p>
+  <p>No hay productos</p>
   }
 </div>
