. Servicio de paginación

--- a/src/app/store-front/pages/gender-page/gender-page.component.html
+++ b/src/app/store-front/pages/gender-page/gender-page.component.html
@@ -13,3 +13,8 @@
   <p>No hay productos</p>
   }
 </div>
+
+<app-pagination
+  [pages]="productResource.value()?.pages ?? 0"
+  [currentPage]="paginationService.currentPage()"
+/>
