--- a/src/app/products/components/product-carousel/product-carousel.component.html
+++ b/src/app/products/components/product-carousel/product-carousel.component.html
@@ -8,7 +8,7 @@
       <img
         [src]="image | productImage"
         alt="Product"
-        class="w-full object-cover"
+        class="w-full object-cover animate-fadeIn"
       />
     </div>
     } ...
