--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<form class="flex flex-col gap-2">
+<form class="flex flex-col gap-2" [formGroup]="loginForm" (ngSubmit)="submit()">
   <label class="input validator join-item">
     <svg
       class="h-[1em] opacity-50"
@@ -16,7 +16,12 @@
         <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
       </g>
     </svg>
-    <input type="email" placeholder="mail@site.com" required />
+    <input
+      type="email"
+      placeholder="Correo electrónico"
+      required
+      formControlName="email"
+    />
   </label>
   <label class="input validator">
     <svg
@@ -40,18 +45,42 @@
     <input
       type="password"
       required
-      placeholder="Password"
+      placeholder="Contraseña"
+      formControlName="password"
       minlength="8"
       pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-      title="Must be more than 8 characters, including number, lowercase letter, uppercase letter"
+      title="Must be more than 8
+    characters, including number, lowercase letter, uppercase letter"
     />
   </label>
 
   <button type="submit" class="btn btn-secondary">Ingresar</button>
 
-  <p>
+  <p class="text-slate-700">
     ¿No tienes cuenta?
 
     <a routerLink="/auth/register" class="text-secondary"> Crea una aquí </a>
   </p>
 </form>
+
+@if(hasError()){
+<div
+  role="alert"
+  class="alert alert-error animate-fadeIn fixed bottom-5 right-5 w-52"
+>
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    class="h-6 w-6 shrink-0 stroke-current"
+    fill="none"
+    viewBox="0 0 24 24"
+  >
+    <path
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      stroke-width="2"
+      d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
+    />
+  </svg>
+  <span>Por favor revise la información ingresada</span>
+</div>
+}
