--- a/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
+++ b/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
@@ -2,6 +2,9 @@
 <div class="flex justify-center items-center h-screen">
   <span class="loading loading-spinner loading-lg"></span>
 </div>
-} @if(productResource.hasValue()){
-<h1>{{ productResource.value().title }}</h1>
+}
+<!--  -->
+
+@if(productResource.hasValue()){
+<product-details [product]="productResource.value()" />
 }
