--- a/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
+++ b/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
@@ -1,7 +1,11 @@
 <h1 class="text-2xl font-bold">{{ product().title }}</h1>
 <div class="divider"></div>
 
-<form [formGroup]="productForm" (ngSubmit)="submit()" class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+<form
+  [formGroup]="productForm"
+  (ngSubmit)="submit()"
+  class="grid grid-cols-1 sm:grid-cols-2 gap-4"
+>
   <!-- Datos generales -->
   <div class="flex flex-col gap-2">
     <h2 class="text-2xl font-bold h-12">Datos generales</h2>
@@ -55,10 +59,38 @@
     <!-- Botones para el género -->
     <div class="grid grid-cols-4 gap-2">
       <!-- <button class="btn btn-sm btn-outline">Masculino</button> -->
-      <button type="button" class="btn btn-sm btn-primary">Masculino</button>
-      <button type="button" class="btn btn-sm btn-accent">Femenino</button>
-      <button type="button" class="btn btn-sm btn-warning">Kid</button>
-      <button type="button" class="btn btn-sm btn-secondary">Unisex</button>
+      <button
+        type="button"
+        class="btn btn-sm"
+        [class.btn-primary]="productForm.value.gender === 'men'"
+        (click)="productForm.patchValue({ gender: 'men' })"
+      >
+        Masculino
+      </button>
+      <button
+        type="button"
+        class="btn btn-sm"
+        [class.btn-accent]="productForm.value.gender === 'women'"
+        (click)="productForm.patchValue({ gender: 'women' })"
+      >
+        Femenino
+      </button>
+      <button
+        type="button"
+        class="btn btn-sm"
+        [class.btn-warning]="productForm.value.gender === 'kid'"
+        (click)="productForm.patchValue({ gender: 'kid' })"
+      >
+        Kid
+      </button>
+      <button
+        type="button"
+        class="btn btn-sm"
+        [class.btn-secondary]="productForm.value.gender === 'unisex'"
+        (click)="productForm.patchValue({ gender: 'unisex' })"
+      >
+        Unisex
+      </button>
     </div>
 
     <!-- <select class="select select-bordered w-full">
@@ -70,7 +102,14 @@
     <!-- Sizes -->
     <div class="grid grid-cols-6 gap-2">
       @for (size of sizes; track size) {
-      <button type="button" class="btn btn-sm btn-outline">{{ size }}</button>
+      <button
+        type="button"
+        class="btn btn-sm"
+        [class.btn-secondary]="productForm.value.sizes?.includes(size)"
+        (click)="sizesClicked(size)"
+      >
+        {{ size }}
+      </button>
       }
     </div>
   </div>
