--- a/src/app/products/components/product-carousel/product-carousel.component.html
+++ b/src/app/products/components/product-carousel/product-carousel.component.html
@@ -11,7 +11,15 @@
         class="w-full object-cover animate-fadeIn"
       />
     </div>
-    } ...
+    }@empty { 
+       <div class="swiper-slide">
+      <img
+        [src]="null | productImage"
+        alt="Product"
+        class="w-full object-cover animate-fadeIn"
+      />
+    </div>
+    }
   </div>
   <!-- If we need pagination -->
   <div class="swiper-pagination"></div>
